part2/crud-app/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-svc
  namespace: todo-namespace

spec:
  type: ClusterIP
  selector:
    app: crud-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
