part2/crud-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-svc
spec:
  type: ClusterIP
  selector:
    app: crud-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
